--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -156,9 +156,8 @@ services:
 
 # Portfolio Home Section
 portfolio-home-items:
-  - image: "assets/images/portfolio/item-1.png"
+  - name: nerf(Neural Radiance Field) #image: "assets/images/portfolio/item-1.png"
     url: "https://github.com/ljb0967/nerf-app"
-    name: nerf(Neural Radiance Field)
 
   - image: "assets/images/portfolio/item-2.png"
     url: "#"
