--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -180,7 +180,7 @@ portfolio-label:
 
 portfolio-items:
   - title: "nerf(Neural Radiance Field)"
-    image: ""
+    image: "assets/images/portfolio/nerf.jpg"
     url: "https://github.com/ljb0967/nerf-app"
     category: "AI"
     description: "An implementation of Neural Radiance Field (NeRF) for 3D scene reconstruction using deep learning."
