--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -68,7 +68,7 @@ blurb:
 
   <li><h4>-  2024년 5월 [광진구 데이터분석공모전] 출전</h4></li><br>
 
-  <li><h4>-  2023년 2학기 [채널톡 해커톤] 참가</h4></li><br>
+  <li><h4>-  2023년 2학기 [채널톡 해커톤] 참가</h4></li>
 
   <li><strong>Hackytalky </strong> <a href="https://github.com/ljb0967/Team12-12-" target="_blank">link</a></li><br>
 
