--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -74,7 +74,9 @@ blurb:
 
   <li><h4>-  2023년 1월 라이센서 자격증 앱 만들기 with flutter</h4></li>
 
-  <li><strong>licenser app </strong> <a href="https://github.com/ljb0967/Licenser" target="_blank">link</a></li><br>
+  <li><strong>licenser app </strong> <a href="https://github.com/ljb0967/Licenser" target="_blank">link</a></li><br><br><br><br><br>
+  <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fljb0967.github.io&count_bg=%23555555&title_bg=%23555555&icon=minutemailer.svg&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a>
+
 
   </ul>
 
