--- a/_config.yml
+++ b/_config.yml
@@ -12,13 +12,13 @@ compress_html:
   startings: [html, head, body]
 
 # Analytics
-analytics:
-  provider:
-    "google-gtag"
-    # false (default), "google", "google-universal", "google-gtag", "custom"
-  google:
-    tracking_id: "G-KHKPVQMPLB"
-    anonymize_ip: # true, false (default)
+# analytics:
+#   provider:
+#     "google-gtag"
+#     # false (default), "google", "google-universal", "google-gtag", "custom"
+#   google:
+#     tracking_id: "G-KHKPVQMPLB"
+#     anonymize_ip: # true, false (default)
 
 # Pages Path
 defaults:
