--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -60,6 +60,8 @@ blurb:
 
   <li><h4>-  2024년 8월 대학생 튜터링 플랫폼 with React, next.js</h4></li><br>
 
+  <li><strong>튜터링 web </strong> <a href="https://github.com/ljb0967/tutoring-platform" target="_blank">link</a></li><br>
+
   <li><h4>-  2024년 여름방학 온디바이스 NeRF을 위한 개선 방안 연구</h4></li>
 
   <li><strong>nerf app </strong> <a href="https://github.com/ljb0967/nerf-app" target="_blank">link</a></li><br>
